# moexalgo

./: README.md  pyproject.toml
moexalgo/: __init__.py  market.py  session.py  shares.py  tickers.py  utils.py
moexalgo/models/: common.py  indices.py  shares.py
sample/: candels.ipynb  first.ipynb  first.py
tests/: test_markets.py  test_tickers.py
